[gd_scene load_steps=8 format=3 uid="uid://ckkcp0mw2ieet"]

[ext_resource type="Script" path="res://scenes/screens/gameover.gd" id="1_eouvj"]
[ext_resource type="Texture2D" uid="uid://be4gobj4ipn2w" path="res://assets/original/backgrounds/Flag-Spain-Arg.webp" id="2_3x168"]
[ext_resource type="Theme" uid="uid://dbjmv7rcvq2m7" path="res://themes/theme_hud.tres" id="3_blw1a"]
[ext_resource type="AudioStream" uid="uid://0p4to6x8jlkw" path="res://assets/original/Music/Himno Full Final.mp3" id="4_ican8"]
[ext_resource type="AudioStream" uid="uid://cugberv1i8wtf" path="res://assets/original/sounds/crow-cheering.mp3" id="5_5ml8l"]
[ext_resource type="Texture2D" uid="uid://dacwfwetgnwh8" path="res://assets/mkt/wishlist.png" id="6_ywyuj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aojef"]
bg_color = Color(0, 0, 0, 0.533333)

[node name="Victoria" type="Node"]
script = ExtResource("1_eouvj")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.14902, 0.14902, 0.14902, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3x168")
expand_mode = 2
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Victoria" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_blw1a")
theme_override_font_sizes/font_size = 68
text = "¡VICTORIA!"
horizontal_alignment = 1

[node name="Victoria" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ican8")
volume_db = 14.0
autoplay = true
bus = &"Musica"

[node name="Crowd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_5ml8l")
autoplay = true
bus = &"Efectos"

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -72.0
offset_right = 125.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10

[node name="Wishlist" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_blw1a")
theme_override_font_sizes/font_size = 24
text = "Seguinos en Steam"

[node name="Reiniciar" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_blw1a")
theme_override_font_sizes/font_size = 24
text = "Volver a jugar"

[node name="Salir" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_blw1a")
text = "Menú principal"

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 160)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aojef")

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -66.0
offset_right = 292.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2

[node name="Wishlist_text" type="Label" parent="Panel/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_blw1a")
theme_override_font_sizes/font_size = 18
text = "Sos el defensor que la patria necesita.  Agregá La Furia de Las Trenzas a tu lista de deseos en Steam para seguir masacrando ingleses. El Diego lo haría.
Buscanos en Steam o scanneá este QR con tu celular."
autowrap_mode = 2

[node name="Wishlist" type="TextureButton" parent="Panel/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
texture_normal = ExtResource("6_ywyuj")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="MarginContainer2/VBoxContainer/Wishlist" to="." method="_on_steam_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Salir" to="." method="_on_salir_pressed"]
